# SmartQuestionPaperGenerator

./: AddQuestionWindow.cpp  AddQuestionWindow.h  AddQuestionWindow.ui  CMakeLists.txt  GeneratePaperWindow.cpp  GeneratePaperWindow.h  GeneratePaperWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp  papergenerator.cpp  papergenerator.h  questionbank.cpp  questionbank.h
